updated at: 2020-02-03 18:13, 【素体付き】着せ替え用コスチューム - Red hot Thief - ひるね屋 - Hirune&#39;s Shop - BOOTH

--- a/VRChat/66/1065766.html
+++ b/VRChat/66/1065766.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>
-      【3Dモデル】着せ替え用コスチューム - Red hot Thief - ひるね屋 - Hirune's Shop -
+      【素体付き】着せ替え用コスチューム - Red hot Thief - ひるね屋 - Hirune's Shop -
       BOOTH
     </title>
     <meta name="description" content=
@@ -14,14 +14,14 @@
     <meta name="twitter:site" content="booth_pm">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content=
-    "【3Dモデル】着せ替え用コスチューム - Red hot Thief - ひるね屋 - Hirune's Shop - BOOTH">
+    "【素体付き】着せ替え用コスチューム - Red hot Thief - ひるね屋 - Hirune's Shop - BOOTH">
     <meta name="twitter:description" content=
     "●モデル説明 【3Dモデル】着せ替え用コスチューム - Red hot Thief 制作者：ひるね ポリゴン数：△11768 マテリアル数：4個 VRChat用のhumanoid対応 フルボディトラッキング対応 デスクトップモーション対応モデル同梱 （VRChat内でしゃがみモーションをした際に腰が逆くの字に折れ難いようにボーンを配置しています） tex001のマテリアルは両面描画のためCulloffの設定をオススメします ポリゴン数の削減、メッシュの貫通を防ぐため一部素肌のメッシュを削除しています、ご了承ください">
     <meta name="twitter:image" content=
     "https://booth.pximg.net/c/620x620/4d603a5d-0611-4e3c-833c-41454379f04e/i/1065766/f35e5a0a-74ca-4332-a803-3a5754975eab_base_resized.jpg">
     <meta property="og:type" content="product">
     <meta property="og:title" content=
-    "【3Dモデル】着せ替え用コスチューム - Red hot Thief - ひるね屋 - Hirune's Shop - BOOTH">
+    "【素体付き】着せ替え用コスチューム - Red hot Thief - ひるね屋 - Hirune's Shop - BOOTH">
     <meta property="og:description" content=
     "●モデル説明 【3Dモデル】着せ替え用コスチューム - Red hot Thief 制作者：ひるね ポリゴン数：△11768 マテリアル数：4個 VRChat用のhumanoid対応 フルボディトラッキング対応 デスクトップモーション対応モデル同梱 （VRChat内でしゃがみモーションをした際に腰が逆くの字に折れ難いようにボーンを配置しています） tex001のマテリアルは両面描画のためCulloffの設定をオススメします ポリゴン数の削減、メッシュの貫通を防ぐため一部素肌のメッシュを削除しています、ご了承ください">
     <meta property="og:image" content=
@@ -144,7 +144,7 @@
                         </div>
                         <h2 class=
                         "u-text-wrap u-tpg-title1 u-mt-0 u-mb-400">
-                          【3Dモデル】着せ替え用コスチューム - Red hot Thief
+                          【素体付き】着せ替え用コスチューム - Red hot Thief
                         </h2>
                         <div class="item-summary__caption"></div>
                       </header>
@@ -238,7 +238,7 @@
                           "https://booth.pm/ja/items/1065766"
                           data-lang="ja" data-hashtags="booth_pm"
                           data-text=
-                          "【3Dモデル】着せ替え用コスチューム - Red hot Thief | ひるね屋 - Hirune's Shop"
+                          "【素体付き】着せ替え用コスチューム - Red hot Thief | ひるね屋 - Hirune's Shop"
                           data-count="none" class=
                           "twitter-share-button" href=
                           "https://twitter.com/share">ツイート</a>
@@ -258,7 +258,7 @@
                           <div class=
                           "market-item-detail-item-image-wrapper">
                             <img alt=
-                            "【3Dモデル】着せ替え用コスチューム - Red hot Thief"
+                            "【素体付き】着せ替え用コスチューム - Red hot Thief"
                             class="market-item-detail-item-image"
                             src=
                             "https://booth.pximg.net/4d603a5d-0611-4e3c-833c-41454379f04e/i/1065766/f35e5a0a-74ca-4332-a803-3a5754975eab_base_resized.jpg">
@@ -268,7 +268,7 @@
                           <div class=
                           "market-item-detail-item-image-wrapper">
                             <img alt=
-                            "【3Dモデル】着せ替え用コスチューム - Red hot Thief"
+                            "【素体付き】着せ替え用コスチューム - Red hot Thief"
                             class="market-item-detail-item-image"
                             data-lazy=
                             "https://booth.pximg.net/4d603a5d-0611-4e3c-833c-41454379f04e/i/1065766/6ca065d9-f702-4c3c-b516-2c0f9c59f121_base_resized.jpg">
@@ -278,7 +278,7 @@
                           <div class=
                           "market-item-detail-item-image-wrapper">
                             <img alt=
-                            "【3Dモデル】着せ替え用コスチューム - Red hot Thief"
+                            "【素体付き】着せ替え用コスチューム - Red hot Thief"
                             class="market-item-detail-item-image"
                             data-lazy=
                             "https://booth.pximg.net/4d603a5d-0611-4e3c-833c-41454379f04e/i/1065766/dfcc111c-0946-4fa7-bf9b-395ff74075b3_base_resized.jpg">
@@ -288,7 +288,7 @@
                           <div class=
                           "market-item-detail-item-image-wrapper">
                             <img alt=
-                            "【3Dモデル】着せ替え用コスチューム - Red hot Thief"
+                            "【素体付き】着せ替え用コスチューム - Red hot Thief"
                             class="market-item-detail-item-image"
                             data-lazy=
                             "https://booth.pximg.net/4d603a5d-0611-4e3c-833c-41454379f04e/i/1065766/f3cc0ea1-89a9-4e47-84ac-8925d126a95a_base_resized.jpg">
@@ -298,7 +298,7 @@
                           <div class=
                           "market-item-detail-item-image-wrapper">
                             <img alt=
-                            "【3Dモデル】着せ替え用コスチューム - Red hot Thief"
+                            "【素体付き】着せ替え用コスチューム - Red hot Thief"
                             class="market-item-detail-item-image"
                             data-lazy=
                             "https://booth.pximg.net/4d603a5d-0611-4e3c-833c-41454379f04e/i/1065766/5a5ac5c2-b111-4b25-af4c-c3a7ca70159a_base_resized.jpg">
@@ -308,7 +308,7 @@
                           <div class=
                           "market-item-detail-item-image-wrapper">
                             <img alt=
-                            "【3Dモデル】着せ替え用コスチューム - Red hot Thief"
+                            "【素体付き】着せ替え用コスチューム - Red hot Thief"
                             class="market-item-detail-item-image"
                             data-lazy=
                             "https://booth.pximg.net/4d603a5d-0611-4e3c-833c-41454379f04e/i/1065766/40031725-b449-4e4e-a72d-b65e1a84474a_base_resized.jpg">
