updated at: 2020-02-03 18:56, いたずらメルヴィー ver1.2 - Minuet_Doll - BOOTH

--- a/VRChat/14/1041314.html
+++ b/VRChat/14/1041314.html
@@ -5,8 +5,7 @@
     <title>
       いたずらメルヴィー ver1.2 - Minuet_Doll - BOOTH
     </title>
-    <meta name="description" content=
-    "VRChatでの利用を想定したUnity Humanoidモデルです。 フルボディトラッキングに対応しました。長らくお待たせいたしました。 詳しくは同梱のインターネットショートカット、もしくは下記URLよりアップロードの手引きをご覧ください。 http://minuetdoll.info/mervi_manual/ 【利用規約】 同梱のインターネットショートカット、もしくは下記URLよりMinuet_Doll3Dモデル利用規約に従ってください。 http://minuetdoll.info/3d/ 【シェーダーについて】">
+    <meta name="description" content=".">
     <meta name="keywords" content=
     "booth, ブース, pixiv, ピクシブ, イラスト, マンガ, 創作, オンラインストア, オンラインショップ, ネットショップ, ec, ネット通販">
     <link rel="canonical" href="https://booth.pm/ja/items/1041314">
@@ -14,15 +13,13 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content=
     "いたずらメルヴィー ver1.2 - Minuet_Doll - BOOTH">
-    <meta name="twitter:description" content=
-    "VRChatでの利用を想定したUnity Humanoidモデルです。 フルボディトラッキングに対応しました。長らくお待たせいたしました。 詳しくは同梱のインターネットショートカット、もしくは下記URLよりアップロードの手引きをご覧ください。 http://minuetdoll.info/mervi_manual/ 【利用規約】 同梱のインターネットショートカット、もしくは下記URLよりMinuet_Doll3Dモデル利用規約に従ってください。 http://minuetdoll.info/3d/ 【シェーダーについて】">
+    <meta name="twitter:description" content=".">
     <meta name="twitter:image" content=
     "https://booth.pximg.net/c/620x620/da3e4894-0b83-47ed-b0a9-5526bd9f9722/i/1041314/b849c15b-35a2-4524-96cb-ba6d91a5991a_base_resized.jpg">
     <meta property="og:type" content="product">
     <meta property="og:title" content=
     "いたずらメルヴィー ver1.2 - Minuet_Doll - BOOTH">
-    <meta property="og:description" content=
-    "VRChatでの利用を想定したUnity Humanoidモデルです。 フルボディトラッキングに対応しました。長らくお待たせいたしました。 詳しくは同梱のインターネットショートカット、もしくは下記URLよりアップロードの手引きをご覧ください。 http://minuetdoll.info/mervi_manual/ 【利用規約】 同梱のインターネットショートカット、もしくは下記URLよりMinuet_Doll3Dモデル利用規約に従ってください。 http://minuetdoll.info/3d/ 【シェーダーについて】">
+    <meta property="og:description" content=".">
     <meta property="og:image" content=
     "https://booth.pximg.net/c/620x620/da3e4894-0b83-47ed-b0a9-5526bd9f9722/i/1041314/b849c15b-35a2-4524-96cb-ba6d91a5991a_base_resized.jpg">
     <meta property="og:url" content=
@@ -312,40 +309,7 @@
                         <div class=
                         "js-market-item-detail-description">
                           <p class="autolink u-text-wrap">
-                            VRChatでの利用を想定したUnity Humanoidモデルです。
-                            フルボディトラッキングに対応しました。長らくお待たせいたしました。
-                            詳しくは同梱のインターネットショートカット、もしくは下記URLよりアップロードの手引きをご覧ください。
-                            http://minuetdoll.info/mervi_manual/
-                            【利用規約】
-                            同梱のインターネットショートカット、もしくは下記URLよりMinuet_Doll3Dモデル利用規約に従ってください。
-                            http://minuetdoll.info/3d/ 【シェーダーについて】
-                            各ライセンスに基づき使用させて頂いております。詳しくは同梱の各テキストファイル（Readme）をご覧ください。
-                            ・みに様の「まんまるしぇーだー_ver_1.3」
-                            https://www.dropbox.com/sh/dp8b6ltr8ifgsw2/AAAwe9qWmfNLUFpNmPSE0fIga?dl=0
-                            【内容】 MD_Mervi_ver1.2 ├fbx ｜｜
-                            MD_Mervi_ver1.2.fbx（fbxモデル） ｜└Texture ｜
-                            ｜ cutout.png（装飾のテクスチャ　カットアウト・透過・裏面表示推奨）
-                            ｜ ｜ cutout_e.png（上記の発光用テクスチャ） ｜ ｜
-                            face.png（顔のテクスチャ　裏面表示推奨） ｜ ｜
-                            face_m.png（上記のマスク用テクスチャ） ｜ ｜
-                            hair.png（髪のテクスチャ　透過・裏面表示推奨） ｜ ｜
-                            matcap.png（逆光のテクスチャ） ｜ ｜
-                            nurse.png（服のテクスチャ　裏面表示推奨） ｜ ｜
-                            skin.png（肌のテクスチャ） ｜ └
-                            skin_m.png（上記のマスク用テクスチャ） ｜
-                            Minuet_Doll3Dモデル利用規約（オンライン規約）（ご利用の際は最新の利用規約をご覧ください）
-                            ｜
-                            Minuet_Doll3Dモデル利用規約.txt（サーバーが通常通り機能しない場合はご確認ください）
-                            ｜
-                            Readme（まんまるしぇーだー_ver_1.3）.txt（同梱させていただいたシェーダーのReadmeです）
-                            ｜ アップロードの手引き（モデルアップロードの際にはご活用ください） ｜
-                            はじめに.txt（このファイル） └
-                            いたずらメルヴィー.unitypackage（本体） 【更新履歴】
-                            2018/12/27　ver1.2　足の捻じれを修正しました。モデルの一部が消える不具合を修正しました。
-                            2018/12/12　ver1.1　Unity2017.4に対応しました。フルトラッキングに対応しました。スケールの追加をしました。足首の構造を修正しました。
-                            2018/10/08　ver1.0　販売開始 【制作】 Minuet_Doll
-                            http://minuetdoll.info/
-                            https://twitter.com/Minuet_Doll
+                            .
                           </p>
                         </div>
                       </section>
