updated at: 2020-02-03 20:02, ティーパーティセット【VRC Ready 3Dモデルセット】 - 車軸直売所 SHAJIKU store - BOOTH

--- a/VRChat/20/1014120.html
+++ b/VRChat/20/1014120.html
@@ -6,7 +6,7 @@
       ティーパーティセット【VRC Ready 3Dモデルセット】 - 車軸直売所 SHAJIKU store - BOOTH
     </title>
     <meta name="description" content=
-    "Made by 車軸制作所 SHAJIKU works 最終更新日：2018/09/18 Ver1.01 一部Triggerのリンク切れを修正">
+    "Made by 車軸制作所 SHAJIKU works 最終更新日：2020/02/03 動作環境についての注意事項を追記 Ver1.01 一部Triggerのリンク切れを修正">
     <meta name="keywords" content=
     "booth, ブース, pixiv, ピクシブ, イラスト, マンガ, 創作, オンラインストア, オンラインショップ, ネットショップ, ec, ネット通販">
     <link rel="canonical" href="https://booth.pm/ja/items/1014120">
@@ -15,14 +15,14 @@
     <meta name="twitter:title" content=
     "ティーパーティセット【VRC Ready 3Dモデルセット】 - 車軸直売所 SHAJIKU store - BOOTH">
     <meta name="twitter:description" content=
-    "Made by 車軸制作所 SHAJIKU works 最終更新日：2018/09/18 Ver1.01 一部Triggerのリンク切れを修正">
+    "Made by 車軸制作所 SHAJIKU works 最終更新日：2020/02/03 動作環境についての注意事項を追記 Ver1.01 一部Triggerのリンク切れを修正">
     <meta name="twitter:image" content=
     "https://booth.pximg.net/c/620x620/073f790d-621e-4ecf-a85e-04aa2017a614/i/1014120/0095ad3e-d224-419b-b526-d6e6ec10857e_base_resized.jpg">
     <meta property="og:type" content="product">
     <meta property="og:title" content=
     "ティーパーティセット【VRC Ready 3Dモデルセット】 - 車軸直売所 SHAJIKU store - BOOTH">
     <meta property="og:description" content=
-    "Made by 車軸制作所 SHAJIKU works 最終更新日：2018/09/18 Ver1.01 一部Triggerのリンク切れを修正">
+    "Made by 車軸制作所 SHAJIKU works 最終更新日：2020/02/03 動作環境についての注意事項を追記 Ver1.01 一部Triggerのリンク切れを修正">
     <meta property="og:image" content=
     "https://booth.pximg.net/c/620x620/073f790d-621e-4ecf-a85e-04aa2017a614/i/1014120/0095ad3e-d224-419b-b526-d6e6ec10857e_base_resized.jpg">
     <meta property="og:url" content=
@@ -307,8 +307,8 @@
                         "js-market-item-detail-description">
                           <p class="autolink u-text-wrap">
                             Made by 車軸制作所 SHAJIKU works
-                            最終更新日：2018/09/18 Ver1.01
-                            一部Triggerのリンク切れを修正
+                            最終更新日：2020/02/03 動作環境についての注意事項を追記
+                            Ver1.01 一部Triggerのリンク切れを修正
                           </p>
                         </div>
                       </section>
