updated at: 2020-02-03 21:14, 甘えんぼうのテディ ver2.1 - Minuet_Doll - BOOTH

--- a/VRChat/88/965488.html
+++ b/VRChat/88/965488.html
@@ -5,8 +5,7 @@
     <title>
       甘えんぼうのテディ ver2.1 - Minuet_Doll - BOOTH
     </title>
-    <meta name="description" content=
-    "VRChatでの利用を想定したUnity Humanoidモデルです。 フルボディトラッキングに対応しました。長らくお待たせいたしました。 詳しくは同梱のインターネットショートカット、もしくは下記URLよりアップロードの手引きをご覧ください。 http://minuetdoll.info/teddy_manual/ 【利用規約】 同梱のインターネットショートカット、もしくは下記URLよりMinuet_Doll3Dモデル利用規約に従ってください。 http://minuetdoll.info/3d/ 【シェーダーについて】">
+    <meta name="description" content=".">
     <meta name="keywords" content=
     "booth, ブース, pixiv, ピクシブ, イラスト, マンガ, 創作, オンラインストア, オンラインショップ, ネットショップ, ec, ネット通販">
     <link rel="canonical" href="https://booth.pm/ja/items/965488">
@@ -14,15 +13,13 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content=
     "甘えんぼうのテディ ver2.1 - Minuet_Doll - BOOTH">
-    <meta name="twitter:description" content=
-    "VRChatでの利用を想定したUnity Humanoidモデルです。 フルボディトラッキングに対応しました。長らくお待たせいたしました。 詳しくは同梱のインターネットショートカット、もしくは下記URLよりアップロードの手引きをご覧ください。 http://minuetdoll.info/teddy_manual/ 【利用規約】 同梱のインターネットショートカット、もしくは下記URLよりMinuet_Doll3Dモデル利用規約に従ってください。 http://minuetdoll.info/3d/ 【シェーダーについて】">
+    <meta name="twitter:description" content=".">
     <meta name="twitter:image" content=
     "https://booth.pximg.net/c/620x620/da3e4894-0b83-47ed-b0a9-5526bd9f9722/i/965488/f0ddb1b5-c94a-4fbc-a76a-7a1abe3797ae_base_resized.jpg">
     <meta property="og:type" content="product">
     <meta property="og:title" content=
     "甘えんぼうのテディ ver2.1 - Minuet_Doll - BOOTH">
-    <meta property="og:description" content=
-    "VRChatでの利用を想定したUnity Humanoidモデルです。 フルボディトラッキングに対応しました。長らくお待たせいたしました。 詳しくは同梱のインターネットショートカット、もしくは下記URLよりアップロードの手引きをご覧ください。 http://minuetdoll.info/teddy_manual/ 【利用規約】 同梱のインターネットショートカット、もしくは下記URLよりMinuet_Doll3Dモデル利用規約に従ってください。 http://minuetdoll.info/3d/ 【シェーダーについて】">
+    <meta property="og:description" content=".">
     <meta property="og:image" content=
     "https://booth.pximg.net/c/620x620/da3e4894-0b83-47ed-b0a9-5526bd9f9722/i/965488/f0ddb1b5-c94a-4fbc-a76a-7a1abe3797ae_base_resized.jpg">
     <meta property="og:url" content=
@@ -312,45 +309,7 @@
                         <div class=
                         "js-market-item-detail-description">
                           <p class="autolink u-text-wrap">
-                            VRChatでの利用を想定したUnity Humanoidモデルです。
-                            フルボディトラッキングに対応しました。長らくお待たせいたしました。
-                            詳しくは同梱のインターネットショートカット、もしくは下記URLよりアップロードの手引きをご覧ください。
-                            http://minuetdoll.info/teddy_manual/
-                            【利用規約】
-                            同梱のインターネットショートカット、もしくは下記URLよりMinuet_Doll3Dモデル利用規約に従ってください。
-                            http://minuetdoll.info/3d/ 【シェーダーについて】
-                            各ライセンスに基づき使用させて頂いております。詳しくは同梱の各テキストファイル（Readme）をご覧ください。
-                            ・みに様の「まんまるしぇーだー_ver_1.3」
-                            https://www.dropbox.com/sh/dp8b6ltr8ifgsw2/AAAwe9qWmfNLUFpNmPSE0fIga?dl=0
-                            【内容】 MD_Teddy_ver2.1 ├fbx ｜｜
-                            MD_Teddy_dtver2.1.fbx（体のfbxモデル　くまのぬいぐるみを抱いた姿）
-                            ｜｜ MD_Teddy_face.fbx（頭のfbxモデル） ｜｜
-                            MD_Teddy_vrver2.1.fbx（体のfbxモデル　Tポーズ）
-                            ｜└Texture ｜ ｜
-                            cutout.png（肌のテクスチャ　カットアウト・裏面表示推奨） ｜ ｜
-                            cutout_e.png（上記の発光用テクスチャ） ｜ ｜
-                            face.png（頭のテクスチャ　裏面表示推奨） ｜ ｜
-                            face_m.png（上記のマスク用テクスチャ） ｜ ｜
-                            matcap.png（逆光のテクスチャ） ｜ ｜
-                            salopette.png（服飾のテクスチャ　裏面表示推奨） ｜ ｜
-                            salopette2.png（服飾のテクスチャ　裏面表示推奨　salopette.pngの模様なしver）
-                            ｜ ｜ skin.png（肌のテクスチャ） ｜ ｜
-                            skin_m.png（上記のマスク用テクスチャ） ｜ └
-                            tights.png（服飾のテクスチャ　裏面表示推奨） ｜
-                            Minuet_Doll3Dモデル利用規約（オンライン規約）（ご利用の際は最新の利用規約をご覧ください）
-                            ｜
-                            Minuet_Doll3Dモデル利用規約.txt（サーバーが通常通り機能しない場合はご確認ください）
-                            ｜
-                            Readme（まんまるしぇーだー_ver_1.3）.txt（同梱させていただいたシェーダーのReadmeです）
-                            ｜ アップロードの手引き（モデルアップロードの際にはご活用ください） ｜
-                            はじめに.txt（テキストファイル） └
-                            甘えんぼうのテディ.unitypackage（本体） 【更新履歴】
-                            2018/12/12　ver2.1　Unity2017.4に対応しました。フルトラッキングに対応しました。スケールの追加をしました。
-                            2018/10/08　ver2.0　VRChat仕様変更に伴い自動アニメーションを修正しました。シェーダーの同梱、スケールの追加、テクスチャの形式変更、テクスチャの追加をしました。
-                            2018/08/29　ver1.1　リップシンクと表情が干渉する問題を修正しました。ウィンクを追加しました。
-                            2018/08/13　ver1.0　販売開始 【制作】 Minuet_Doll
-                            http://minuetdoll.info/
-                            https://twitter.com/Minuet_Doll
+                            .
                           </p>
                         </div>
                       </section>
