updated at: 2020-02-04 01:06, VRCAvatarEditor beta - がとーしょこらのおみせ @gatosyocora - BOOTH

--- a/VRChat/44/1258744.html
+++ b/VRChat/44/1258744.html
@@ -6,7 +6,7 @@
       VRCAvatarEditor beta - がとーしょこらのおみせ @gatosyocora - BOOTH
     </title>
     <meta name="description" content=
-    "VRChatで使用するアバターの作成・編集を支援するエディタ拡張ツールです。 アバターがうつったモニターを確認しながら表情作成等をおこなえます。 現バージョン beta v0.3">
+    "VRChatで使用するアバターの作成・編集を支援するエディタ拡張ツールです。 アバターがうつったモニターを確認しながら表情作成等をおこなえます。 現バージョン beta v0.3.0.1 【バージョンアップ時の注意事項】 VRCAvatarEditor v0.3.0.1にバージョンアップする際には&quot;VRCAvatarEditor/AnimationsフォルダをVRCAvatarEditorフォルダの外に移動させてから&quot;VRCAvatarEditorフォルダごと削除して再度本ツールをインポートしてください。">
     <meta name="keywords" content=
     "booth, ブース, pixiv, ピクシブ, イラスト, マンガ, 創作, オンラインストア, オンラインショップ, ネットショップ, ec, ネット通販">
     <link rel="canonical" href="https://booth.pm/ja/items/1258744">
@@ -15,14 +15,14 @@
     <meta name="twitter:title" content=
     "VRCAvatarEditor beta - がとーしょこらのおみせ @gatosyocora - BOOTH">
     <meta name="twitter:description" content=
-    "VRChatで使用するアバターの作成・編集を支援するエディタ拡張ツールです。 アバターがうつったモニターを確認しながら表情作成等をおこなえます。 現バージョン beta v0.3">
+    "VRChatで使用するアバターの作成・編集を支援するエディタ拡張ツールです。 アバターがうつったモニターを確認しながら表情作成等をおこなえます。 現バージョン beta v0.3.0.1 【バージョンアップ時の注意事項】 VRCAvatarEditor v0.3.0.1にバージョンアップする際には&quot;VRCAvatarEditor/AnimationsフォルダをVRCAvatarEditorフォルダの外に移動させてから&quot;VRCAvatarEditorフォルダごと削除して再度本ツールをインポートしてください。">
     <meta name="twitter:image" content=
     "https://booth.pximg.net/c/620x620/5daaaeb1-43fa-4c89-8da3-e7e44093dddb/i/1258744/7df9c25c-28cb-4437-abb9-0af3e031a3a4_base_resized.jpg">
     <meta property="og:type" content="product">
     <meta property="og:title" content=
     "VRCAvatarEditor beta - がとーしょこらのおみせ @gatosyocora - BOOTH">
     <meta property="og:description" content=
-    "VRChatで使用するアバターの作成・編集を支援するエディタ拡張ツールです。 アバターがうつったモニターを確認しながら表情作成等をおこなえます。 現バージョン beta v0.3">
+    "VRChatで使用するアバターの作成・編集を支援するエディタ拡張ツールです。 アバターがうつったモニターを確認しながら表情作成等をおこなえます。 現バージョン beta v0.3.0.1 【バージョンアップ時の注意事項】 VRCAvatarEditor v0.3.0.1にバージョンアップする際には&quot;VRCAvatarEditor/AnimationsフォルダをVRCAvatarEditorフォルダの外に移動させてから&quot;VRCAvatarEditorフォルダごと削除して再度本ツールをインポートしてください。">
     <meta property="og:image" content=
     "https://booth.pximg.net/c/620x620/5daaaeb1-43fa-4c89-8da3-e7e44093dddb/i/1258744/7df9c25c-28cb-4437-abb9-0af3e031a3a4_base_resized.jpg">
     <meta property="og:url" content=
@@ -181,9 +181,9 @@
                                     <a class=
                                     "btn add-cart full-length"
                                     title=
-                                    "VRCAvatarEditor_beta_v0.3.zip"
+                                    "VRCAvatarEditor_beta_v0.3.0.1.zip"
                                     href=
-                                    "https://booth.pm/downloadables/888397">
+                                    "https://booth.pm/downloadables/889440">
                                     <div class="u-d-block">
                                       <span class=
                                       "cmd-label">無料ダウンロード</span>
@@ -192,7 +192,7 @@
                                     "u-d-flex u-flex-wrap u-justify-content-center u-tpg-caption1 u-fw-normal">
                                       <div class=
                                       "u-text-ellipsis u-max-w-50">
-                                        VRCAvatarEditor_beta_v0.3
+                                        VRCAvatarEditor_beta_v0.3.0.1
                                       </div>
                                       <div>
                                         .zip
@@ -366,7 +366,9 @@
                           <p class="autolink u-text-wrap">
                             VRChatで使用するアバターの作成・編集を支援するエディタ拡張ツールです。
                             アバターがうつったモニターを確認しながら表情作成等をおこなえます。
-                            現バージョン beta v0.3
+                            現バージョン beta v0.3.0.1 【バージョンアップ時の注意事項】
+                            VRCAvatarEditor
+                            v0.3.0.1にバージョンアップする際には"VRCAvatarEditor/AnimationsフォルダをVRCAvatarEditorフォルダの外に移動させてから"VRCAvatarEditorフォルダごと削除して再度本ツールをインポートしてください。
                           </p>
                         </div>
                       </section>
