updated at: 2020-02-04 01:08, 72caキャンディ・ギフト（Prefab版） ver1.0 - Minuet_Doll - BOOTH

--- a/VRChat/90/1258190.html
+++ b/VRChat/90/1258190.html
@@ -5,8 +5,7 @@
     <title>
       72caキャンディ・ギフト（Prefab版） ver1.0 - Minuet_Doll - BOOTH
     </title>
-    <meta name="description" content=
-    "バーチャルマーケット2開催記念＆ホワイトデーセールは終了しました！ありがとうございました！ 当モデルは、私Minuet_Dollが、過去になつか（現72ca）の名義でMikuMikuDance用に制作配布したモデルをUnityでの利用を想定して再調整したunitypackageデータです。元々はMikuMikuDance用のモデルの再利用であり、unitypackage化にあたり容量の削減までには手が回っておりませんことをあらかじめご了承ください。 MikuMikuDance用モデルは現在も下記URL先で無料ダウンロードできます。 【MMDアクセサリ配布】2016年福袋">
+    <meta name="description" content=".">
     <meta name="keywords" content=
     "booth, ブース, pixiv, ピクシブ, イラスト, マンガ, 創作, オンラインストア, オンラインショップ, ネットショップ, ec, ネット通販">
     <link rel="canonical" href="https://booth.pm/ja/items/1258190">
@@ -14,15 +13,13 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content=
     "72caキャンディ・ギフト（Prefab版） ver1.0 - Minuet_Doll - BOOTH">
-    <meta name="twitter:description" content=
-    "バーチャルマーケット2開催記念＆ホワイトデーセールは終了しました！ありがとうございました！ 当モデルは、私Minuet_Dollが、過去になつか（現72ca）の名義でMikuMikuDance用に制作配布したモデルをUnityでの利用を想定して再調整したunitypackageデータです。元々はMikuMikuDance用のモデルの再利用であり、unitypackage化にあたり容量の削減までには手が回っておりませんことをあらかじめご了承ください。 MikuMikuDance用モデルは現在も下記URL先で無料ダウンロードできます。 【MMDアクセサリ配布】2016年福袋">
+    <meta name="twitter:description" content=".">
     <meta name="twitter:image" content=
     "https://booth.pximg.net/c/620x620/da3e4894-0b83-47ed-b0a9-5526bd9f9722/i/1258190/08782c15-7c74-47f8-87c7-d0ec75a7b431_base_resized.jpg">
     <meta property="og:type" content="product">
     <meta property="og:title" content=
     "72caキャンディ・ギフト（Prefab版） ver1.0 - Minuet_Doll - BOOTH">
-    <meta property="og:description" content=
-    "バーチャルマーケット2開催記念＆ホワイトデーセールは終了しました！ありがとうございました！ 当モデルは、私Minuet_Dollが、過去になつか（現72ca）の名義でMikuMikuDance用に制作配布したモデルをUnityでの利用を想定して再調整したunitypackageデータです。元々はMikuMikuDance用のモデルの再利用であり、unitypackage化にあたり容量の削減までには手が回っておりませんことをあらかじめご了承ください。 MikuMikuDance用モデルは現在も下記URL先で無料ダウンロードできます。 【MMDアクセサリ配布】2016年福袋">
+    <meta property="og:description" content=".">
     <meta property="og:image" content=
     "https://booth.pximg.net/c/620x620/da3e4894-0b83-47ed-b0a9-5526bd9f9722/i/1258190/08782c15-7c74-47f8-87c7-d0ec75a7b431_base_resized.jpg">
     <meta property="og:url" content=
@@ -302,58 +299,7 @@
                         <div class=
                         "js-market-item-detail-description">
                           <p class="autolink u-text-wrap">
-                            バーチャルマーケット2開催記念＆ホワイトデーセールは終了しました！ありがとうございました！
-                            当モデルは、私Minuet_Dollが、過去になつか（現72ca）の名義でMikuMikuDance用に制作配布したモデルをUnityでの利用を想定して再調整したunitypackageデータです。元々はMikuMikuDance用のモデルの再利用であり、unitypackage化にあたり容量の削減までには手が回っておりませんことをあらかじめご了承ください。
-                            MikuMikuDance用モデルは現在も下記URL先で無料ダウンロードできます。
-                            【MMDアクセサリ配布】2016年福袋
-                            http://seiga.nicovideo.jp/seiga/im5459917
-                            主な違いとしては、上記MikuMikuDance用モデルが商用利用不可であることに対し当モデル「72caキャンディ・ギフト（Prefab版）」は収益化等の商用利用が可能となっております。詳しくは利用規約をご確認ください。
-                            上記MikuMikuDance用モデルはunitypackage化に伴い規約改定予定ですため、ご了承ください。2019/03/07追記
-                            【アップロード方法】
-                            Unityのプロジェクトを開き、同梱の72caキャンディ・ギフト（Prefab版）.unitypackageをダブルクリックしてインポートしてください。Assets内に「72ca_candygift」というフォルダが追加されます。
-                            ・各「7C_～」フォルダ内にシェーダー設定済のPrefabデータが入っておりますのでご活用ください。
-                            ・「Scene_ver***（***内にはバージョン名が入ります）」フォルダにはサンプルシーンが入っています。
-                            【利用規約】
-                            同梱のインターネットショートカット、もしくは下記URLよりMinuet_Doll3Dモデル利用規約に従ってください。
-                            http://minuetdoll.info/3d/ 【追加・承諾事項】
-                            「72caキャンディ・ギフト（Prefab版）」を含むワールドデータ（改造、改変の有無、3Dモデルの一部であるか、全部であるかに関わらず）をサーバーにアップロードし、商品を購入していない第三者を招待したり、VRChatにPublic化の申請を行うことは、Minuet_Doll3Dモデル利用規約
-                            第4条　第4項の以下禁止行為には抵触しないものとします。 　＞(1)
-                            商品である3Dモデル（改造、改変の有無、一部であるか全部であるかを問いません。）を配布、転載、その他商品を購入していない第三者が商品を使用できる状態にすること。
-                            【シェーダーについて】
-                            各ライセンスに基づき使用させて頂いております。詳しくは同梱の各テキストファイル（Readme）をご覧ください。
-                            ・ユニティ・テクノロジーズ・ジャパン合同会社様の「ユニティちゃんトゥーンシェーダー
-                            Ver.2.0.6」
-                            http://unity-chan.com/download/releaseNote.php?id=UTS2_0
-                            ・Shadersフォルダ内の「ClearShader_Modified」は、Es様のブログ「しゅみぷろ」（http://esprog.hatenablog.com/）内の記事、
-                            「シンプルなMatcapシェーダーを書いてみる
-                            」（http://esprog.hatenablog.com/entry/2017/01/28/231735）
-                            のコードを参考にさせて頂き、お休みさん、phi16様のご協力のもとに生成されたシェーダーです。
-                            「ClearShader_Modified」のみの使用、「ClearShader_Modified」の再配布は禁止とさせて頂きます。
-                            【内容】 72ca_candygift_ver1.0 ├7C_candy
-                            ｜｜└Texture（包み紙キャンディのテクスチャ　ファイル数13） ｜｜
-                            candy.fbx（包み紙キャンディのfbxモデル　ポリゴン数△1480）
-                            ├7C_candybouquet
-                            ｜｜｜Texture（キャンディブーケのテクスチャ　ファイル数24）
-                            ｜｜└TextureCustom（キャンディブーケのカスタム用テクスチャ　ファイル数15）
-                            ｜｜
-                            candybouquet.fbx（キャンディブーケのfbxモデル　ポリゴン数△73096）
-                            ├7C_heartcandy
-                            ｜｜└Texture（ハートキャンディのテクスチャ　ファイル数14） ｜｜
-                            heartcandy.fbx（ハートキャンディのfbxモデル　ポリゴン数△3536）
-                            ├7C_lollipop
-                            ｜｜└Texture（ペロペロキャンディのテクスチャ　ファイル数9） ｜└
-                            lollipop.fbx（ペロペロキャンディのfbxモデル　ポリゴン数△5540）
-                            ｜
-                            Minuet_Doll3Dモデル利用規約（オンライン規約）（ご利用の際は最新の利用規約をご覧ください）
-                            ｜
-                            Minuet_Doll3Dモデル利用規約.txt（サーバーが通常通り機能しない場合はご確認ください）
-                            ｜ README（ユニティちゃんトゥーンシェーダー
-                            Ver.2.0.6）.md（同梱させていただいたシェーダーのReadmeです）
-                            ｜ はじめに.txt（このファイル） └
-                            72caキャンディ・ギフト（Prefab版）.unitypackage（本体）
-                            【更新履歴】 2019/03/03　ver1.0　販売開始 【制作】
-                            Minuet_Doll http://minuetdoll.info/
-                            https://twitter.com/Minuet_Doll
+                            .
                           </p>
                         </div>
                       </section>
