updated at: 2020-02-04 02:58, 72caコスメティックス（VRCワールド版） ver1.0 - Minuet_Doll - BOOTH

--- a/VRChat/50/1196250.html
+++ b/VRChat/50/1196250.html
@@ -5,8 +5,7 @@
     <title>
       72caコスメティックス（VRCワールド版） ver1.0 - Minuet_Doll - BOOTH
     </title>
-    <meta name="description" content=
-    "当モデルは、私Minuet_Dollが、過去になつか（現72ca）の名義でMikuMikuDance用に制作配布したモデルをVRChat（ワールド）での利用を想定して再調整したセッティング済のワールドデータです。元々はMikuMikuDance用のモデルの再利用であり、ワールドデータ化にあたり容量の削減までには手が回っておりませんことをあらかじめご了承ください。 MikuMikuDance用モデルは現在も下記URL先で無料ダウンロードできます。 【MMDアクセサリ配布】スフィアグロス http://seiga.nicovideo.jp/seiga/im5722071">
+    <meta name="description" content=".">
     <meta name="keywords" content=
     "booth, ブース, pixiv, ピクシブ, イラスト, マンガ, 創作, オンラインストア, オンラインショップ, ネットショップ, ec, ネット通販">
     <link rel="canonical" href="https://booth.pm/ja/items/1196250">
@@ -14,15 +13,13 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content=
     "72caコスメティックス（VRCワールド版） ver1.0 - Minuet_Doll - BOOTH">
-    <meta name="twitter:description" content=
-    "当モデルは、私Minuet_Dollが、過去になつか（現72ca）の名義でMikuMikuDance用に制作配布したモデルをVRChat（ワールド）での利用を想定して再調整したセッティング済のワールドデータです。元々はMikuMikuDance用のモデルの再利用であり、ワールドデータ化にあたり容量の削減までには手が回っておりませんことをあらかじめご了承ください。 MikuMikuDance用モデルは現在も下記URL先で無料ダウンロードできます。 【MMDアクセサリ配布】スフィアグロス http://seiga.nicovideo.jp/seiga/im5722071">
+    <meta name="twitter:description" content=".">
     <meta name="twitter:image" content=
     "https://booth.pximg.net/c/620x620/da3e4894-0b83-47ed-b0a9-5526bd9f9722/i/1196250/3990bf98-9cfd-4e06-abb5-f555a93237b3_base_resized.jpg">
     <meta property="og:type" content="product">
     <meta property="og:title" content=
     "72caコスメティックス（VRCワールド版） ver1.0 - Minuet_Doll - BOOTH">
-    <meta property="og:description" content=
-    "当モデルは、私Minuet_Dollが、過去になつか（現72ca）の名義でMikuMikuDance用に制作配布したモデルをVRChat（ワールド）での利用を想定して再調整したセッティング済のワールドデータです。元々はMikuMikuDance用のモデルの再利用であり、ワールドデータ化にあたり容量の削減までには手が回っておりませんことをあらかじめご了承ください。 MikuMikuDance用モデルは現在も下記URL先で無料ダウンロードできます。 【MMDアクセサリ配布】スフィアグロス http://seiga.nicovideo.jp/seiga/im5722071">
+    <meta property="og:description" content=".">
     <meta property="og:image" content=
     "https://booth.pximg.net/c/620x620/da3e4894-0b83-47ed-b0a9-5526bd9f9722/i/1196250/3990bf98-9cfd-4e06-abb5-f555a93237b3_base_resized.jpg">
     <meta property="og:url" content=
@@ -302,73 +299,7 @@
                         <div class=
                         "js-market-item-detail-description">
                           <p class="autolink u-text-wrap">
-                            当モデルは、私Minuet_Dollが、過去になつか（現72ca）の名義でMikuMikuDance用に制作配布したモデルをVRChat（ワールド）での利用を想定して再調整したセッティング済のワールドデータです。元々はMikuMikuDance用のモデルの再利用であり、ワールドデータ化にあたり容量の削減までには手が回っておりませんことをあらかじめご了承ください。
-                            MikuMikuDance用モデルは現在も下記URL先で無料ダウンロードできます。
-                            【MMDアクセサリ配布】スフィアグロス
-                            http://seiga.nicovideo.jp/seiga/im5722071
-                            【MMDアクセサリ配布】ウェイトミスマスカラ＆ビューラー
-                            http://seiga.nicovideo.jp/seiga/im5730779
-                            【MMDアクセサリ配布】モーフチーク
-                            http://seiga.nicovideo.jp/seiga/im5739757
-                            【MMDアクセサリ配布】アンビエント111アイシャドウ
-                            http://seiga.nicovideo.jp/seiga/im5783134
-                            主な違いとしては、上記MikuMikuDance用モデルが商用利用不可であることに対し当モデル「72caコスメティックス（VRCワールド版）」は収益化等の商用利用が可能となっております。詳しくは利用規約をご確認ください。
-                            上記MikuMikuDance用モデルはunitypackage化に伴い規約改定予定ですため、ご了承ください。2019/03/07追記
-                            【アップロード方法】
-                            詳しくは同梱のインターネットショートカット、もしくは下記URLよりアップロードの手引きをご覧ください。
-                            http://minuetdoll.info/72ca_cosmetics_manual/
-                            【利用規約】
-                            同梱のインターネットショートカット、もしくは下記URLよりMinuet_Doll3Dモデル利用規約に従ってください。
-                            http://minuetdoll.info/3d/ 【追加・承諾事項】
-                            「72caコスメティックス（VRCワールド版）」を含むワールドデータ（改造、改変の有無、3Dモデルの一部であるか、全部であるかに関わらず）をサーバーにアップロードし、商品を購入していない第三者を招待したり、VRChatにPublic化の申請を行うことは、Minuet_Doll3Dモデル利用規約
-                            第4条　第4項の以下禁止行為には抵触しないものとします。 　＞(1)
-                            商品である3Dモデル（改造、改変の有無、一部であるか全部であるかを問いません。）を配布、転載、その他商品を購入していない第三者が商品を使用できる状態にすること。
-                            【シェーダーについて】
-                            各ライセンスに基づき使用させて頂いております。詳しくは同梱の各テキストファイル（Readme）をご覧ください。
-                            ・みに様の「まんまるしぇーだー_ver_1.3」
-                            https://www.dropbox.com/sh/dp8b6ltr8ifgsw2/AAAwe9qWmfNLUFpNmPSE0fIga?dl=0
-                            ・Materialsフォルダ内の「ClearShader_Modified」は、Es様のブログ「しゅみぷろ」（http://esprog.hatenablog.com/）内の記事、
-                            「シンプルなMatcapシェーダーを書いてみる
-                            」（http://esprog.hatenablog.com/entry/2017/01/28/231735）
-                            のコードを参考にさせて頂き、お休みさん、phi16様のご協力のもとに生成されたシェーダーです。
-                            「ClearShader_Modified」のみの使用、「ClearShader_Modified」の再配布は禁止とさせて頂きます。
-                            【内容】 72ca_cosmetics_ver1.0 ├7C_beaura
-                            ｜｜└Texture（ビューラーのテクスチャ　ファイル数13） ｜｜
-                            beaura_gold.fbx（ビューラーのfbxモデル　ポリゴン数△2606）
-                            ├7C_cheek ｜｜└Texture（チークのテクスチャ　ファイル数14）
-                            ｜｜
-                            cheek_pink.fbx（チークのfbxモデル　ポリゴン数△5676）
-                            ├7C_eyeshadow
-                            ｜｜└Texture（アイシャドウのテクスチャ　ファイル数17） ｜｜
-                            eyeshadow_pink.fbx（アイシャドウのfbxモデル　ポリゴン数△1617）
-                            ├7C_gloss ｜｜└Texture（グロスのテクスチャ　ファイル数14）
-                            ｜｜ gloss_red.fbx（グロスのfbxモデル　ポリゴン数△1836）
-                            ├7C_mascara
-                            ｜｜└Texture（マスカラのテクスチャ　ファイル数12） ｜｜
-                            mascara_baw.fbx（マスカラのfbxモデル　ポリゴン数△1894）
-                            ├7C_puff ｜｜└Texture（チークパフのテクスチャ　ファイル数8）
-                            ｜｜
-                            puff_pink.fbx（チークパフのfbxモデル　ポリゴン数△1976）
-                            ｜｜ puff_white.fbx（チークパフのfbxモデル） ├7C_tip
-                            ｜｜└Texture（アイシャドウチップのテクスチャ　ファイル数7） ｜｜
-                            tip_beige.fbx（アイシャドウチップのfbxモデル　ポリゴン数△284）
-                            ｜｜
-                            tip_black.fbx（アイシャドウチップのfbxモデル　ポリゴン数△284）
-                            ｜｜
-                            tip_pink.fbx（アイシャドウチップのfbxモデル　ポリゴン数△284）
-                            ｜└
-                            tip_white.fbx（アイシャドウチップのfbxモデル　ポリゴン数△284）
-                            ｜ Minuet_Doll3Dモデル利用規約（オンライン規約）
-                            （ご利用の際は最新の利用規約をご覧ください） ｜
-                            Minuet_Doll3Dモデル利用規約.txt（サーバーが通常通り機能しない場合はご確認ください）
-                            ｜
-                            Readme（まんまるしぇーだー_ver_1.3）.txt（同梱させていただいたシェーダーのReadmeです）
-                            ｜ アップロードの手引き（モデルアップロードの際にはご活用ください） ｜
-                            はじめに.txt（このファイル） └
-                            72caコスメティックス（VRCワールド版）.unitypackage
-                            （本体） 【更新履歴】 2019/01/26　ver1.0　販売開始 【制作】
-                            Minuet_Doll http://minuetdoll.info/
-                            https://twitter.com/Minuet_Doll
+                            .
                           </p>
                         </div>
                       </section>
