updated at: 2020-02-04 19:45, 【PC版ver.4.3.1＆Quest版ver.4.1】U10素体ver.／オリジナル3Dモデル【VRChat想定】 - - BOOTH

--- a/VRChat/55/1131055.html
+++ b/VRChat/55/1131055.html
@@ -198,6 +198,27 @@
                                       <div>
                                         &nbsp;(480 MB)
                                       </div>
+                                    </div></a><a class=
+                                    "btn add-cart full-length"
+                                    title="OMAKE_U10Nekomimi.zip"
+                                    href=
+                                    "https://booth.pm/downloadables/889803">
+                                    <div class="u-d-block">
+                                      <span class=
+                                      "cmd-label">無料ダウンロード</span>
+                                    </div>
+                                    <div class=
+                                    "u-d-flex u-flex-wrap u-justify-content-center u-tpg-caption1 u-fw-normal">
+                                      <div class=
+                                      "u-text-ellipsis u-max-w-50">
+                                        OMAKE_U10Nekomimi
+                                      </div>
+                                      <div>
+                                        .zip
+                                      </div>
+                                      <div>
+                                        &nbsp;(3.38 MB)
+                                      </div>
                                     </div></a>
                                   </div>
                                 </div>
@@ -245,6 +266,27 @@
                                       </div>
                                       <div>
                                         &nbsp;(254 MB)
+                                      </div>
+                                    </div></a><a class=
+                                    "btn add-cart full-length"
+                                    title="U10HQ_5000_ver.1.3.zip"
+                                    href=
+                                    "https://booth.pm/downloadables/708563">
+                                    <div class="u-d-block">
+                                      <span class=
+                                      "cmd-label">無料ダウンロード</span>
+                                    </div>
+                                    <div class=
+                                    "u-d-flex u-flex-wrap u-justify-content-center u-tpg-caption1 u-fw-normal">
+                                      <div class=
+                                      "u-text-ellipsis u-max-w-50">
+                                        U10HQ_5000_ver.1.3
+                                      </div>
+                                      <div>
+                                        .zip
+                                      </div>
+                                      <div>
+                                        &nbsp;(27.3 MB)
                                       </div>
                                     </div></a>
                                   </div>
